# Logo_to_ASCII

./: .gitignore  Cargo.toml  readme.md  test.txt  test8x16.txt
.github/workflows/: release.yml
docs/: faq.md  help-message.md  how-it-works.md  installation.md  tips.md  tutorial.md  usage.md
docs/dev/: web-deploy.md
docs/tutorial/: tutorial-advanced.md  tutorial-algorithms.md  tutorial-borders.md  tutorial-characters.md  tutorial-font.md  tutorial-format.md  tutorial-images.md  tutorial-preprocessing.md  tutorial-size-position.md
src/: abc.rs  args.rs  block.rs  calc_pixel.rs  characters.rs  config.rs  errors.rs  font.rs  image_ops.rs  lib.rs  main.rs  proc_block.rs  proc_image.rs  proc_pixel.rs  types.rs  wasm.rs
tests/: cross.rs  misc.rs  tentacles.rs
web/: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/src/: app.html
web/src/lib/: converter.ts  stores.ts  wasm.ts
web/src/lib/components/atoms/: Button.svelte  Section.svelte  Select.svelte  Slider.svelte  TextInput.svelte  Toggle.svelte
web/src/lib/components/molecules/: AlgorithmControls.svelte  BorderControls.svelte  CharacterControls.svelte  DropZone.svelte  ExportControls.svelte  ImageControls.svelte  SizeControls.svelte  ViewModeControls.svelte
web/src/lib/components/organisms/: Header.svelte  PreviewArea.svelte  PreviewOverlay.svelte  PreviewSideBySide.svelte  Sidebar.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/styles/: global.css
